tests/invalid/exit-with-args.coil
' @test invalid
' @error preparation
' @covers EXIT
' @description EXIT does not accept arguments or modifiers

EXIT "done"
